# cw-osmo-price

./: Cargo.toml  README.md
.github/workflows/: cw.yml
examples/: schema.rs
schema/: account_response.json  execute_msg.json  gamm_price_packet.json  list_accounts_response.json  packet_msg.json  query_msg.json  spot_price_msg.json
src/: contract.rs  ibc.rs  ibc_msg.rs  msg.rs  state.rs
tests/: integration.rs
