[package]
name = "ibc-gamm"
version = "0.1.0"
authors = ["Giancarlos Salas <me@giansalex.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5", features = ["stargate"] }
cw-storage-plus = "0.12.1"
cw-osmo-proto = { path = "../cw-gamm/packages/osmo-proto", version = "0.1.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta5"
